tests/ui/project/invalid.stderr
error: unexpected token
  --> $DIR/invalid.rs:14:14
   |
14 |     #[project(foo)] //~ ERROR unexpected token
   |              ^
